--- a/project/apps/authentication/templates/register.html
+++ b/project/apps/authentication/templates/register.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <form action="" method="post">
+    {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Register</button>
   </form>
