--- a/project/apps/authentication/templates/logout.html
+++ b/project/apps/authentication/templates/logout.html
@@ -7,9 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <h3>Profile</h3>
-  <div>Username: {{ user.username }}</div>
-  <div>Date Joined: {{ user.date_joined | date:'d-m-Y' }}</div>
-  <button><a href="">Logout</a></button>
+  Out
 </body>
 </html>
