--- a/project/apps/authentication/templates/password_change_done.html
+++ b/project/apps/authentication/templates/password_change_done.html
@@ -7,10 +7,6 @@
   <title>{{ title }}</title>
 </head>
 <body>
-  <form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">change</button>
-  </form>
+  Done
 </body>
 </html>
