--- a/project/apps/authentication/templates/password_reset_done.html
+++ b/project/apps/authentication/templates/password_reset_done.html
@@ -7,10 +7,6 @@
   <title>{{ title }}</title>
 </head>
 <body>
-  <form action="" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit">Reset</button>
-  </form>
+  Check email
 </body>
 </html>
