--- a/project/apps/authentication/templates/password_reset_email.html
+++ b/project/apps/authentication/templates/password_reset_email.html
@@ -13,14 +13,14 @@ To reset your password, please click the following link, or copy and paste it
 into your web browser:
 {% endblocktrans %}
 
-<a rel="noreferrer" href="{{ protocol }}://{{ domain }}{% url 'auth_password_reset_confirm' uid token %}">
-  {{ protocol }}://{{ domain }}{% url 'auth_password_reset_confirm' uid token %}
+<a rel="noreferrer" href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uid token %}">
+  {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uid token %}
 </a>
 
 {% blocktrans %}Your username, in case you've forgotten:{% endblocktrans %} {{ user.get_username }}
 
 
-{% blocktrans %}Best regards{% endblocktrans %},
+{% blocktrans %}Best{% endblocktrans %},
 {{ site_name }} {% blocktrans %}Management{% endblocktrans %}
 
 
