--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,4 +1,3 @@
 {% extends "layouts/base.html" %}
-{% block content %}
-Index
-{% endblock content %}
+{% block title %} index {% endblock title %}
+{% block content %} Index {% endblock content %}
