--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -10,7 +10,32 @@
   <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
 </head>
 <body>
+  <!-- Toastr -->
+  <script>
+    {% if messages %}
+      document.addEventListener("DOMContentLoaded", function(event) {
+        toastr.options = { "closeButton": true, "debug": false, "newestOnTop": true,
+          "progressBar": false, "positionClass": "toast-top-right", "preventDuplicates": true,
+          "onclick": null, "showDuration": "300", "hideDuration": "1000", "timeOut": "5000",
+          "extendedTimeOut": "1000", "showEasing": "swing", "hideEasing": "linear",
+          "showMethod": "fadeIn", "hideMethod": "fadeOut" };
+        {% autoescape off %}
+          {% for msg in messages %}
+            toastr.{{ msg.level_tag }}("{{ msg }}");
+          {% endfor %}
+        {% endautoescape %}
+      });
+    {% endif %}
+  </script>
+  <!-- End Toastr -->
+
   {% block content %}{% endblock content %}
+  
+  <!-- Lib Toastr -->
+  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="{% static 'css/toastr.css' %}" media="all">
+  <script type="text/javascript" src="{% static 'js/toastr.min.js' %}"></script> 
+  <!-- End Lib Toastr -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
