--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -7,7 +7,8 @@
     display: none;
   }
   .sidebar {
-    max-height: 80vh;
+    /* max-height: 80vh; */
+    max-width: 20vh;
   }
   .btn-toggle {
     max-width: 10vh;
@@ -17,7 +18,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="sidebar col-3 overflow-scroll border-end vh-100">
+    <div class="sidebar col-2 overflow-scroll border-end vh-100">
       <div class="row">
         <div class="col-12">
           <ul>
@@ -31,7 +32,7 @@
         </div>
       </div>
     </div>
-    <div class="col-9">
+    <div class="col-10">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, et.</p>
     </div>
   </div>
