--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -3,36 +3,40 @@
 {% block content %}
 
 <style>
-  .sidebar::-webkit-scrollbar{
+  .fixed__side::-webkit-scrollbar{
     display: none;
   }
-  .sidebar {
-    /* max-height: 80vh; */
-    max-width: 20vh;
+  .fixed__side {
+    height: calc(100vh - 100px);
+    overflow-y: scroll;
+    /* max-width: 20vh; */
   }
-  .btn-toggle {
-    max-width: 10vh;
+  .nav__Toggle {
+    line-height: 50px;
+    display: block;
+    width: 100%;
+    max-width: 20vh;
   }
 
 </style>
 
 <div class="container-fluid">
   <div class="row">
-    <div class="sidebar col-2 overflow-scroll border-end vh-100">
-      <div class="row">
+    <div class="sidebar col-2 border-end vh-100">
+      <div class="fixed__side row">
         <div class="col-12">
           <ul>
             <li>1</li><li>2</li><li>3</li><li>4</li><li>5</li><li>6</li><li>7</li><li>8</li><li>9</li><li>0</li><li>1</li><li>2</li><li>3</li><li>4</li><li>5</li><li>6</li><li>7</li><li>8</li><li>9</li><li>0</li><li>1</li><li>2</li><li>3</li><li>4</li><li>5</li><li>6</li><li>7</li><li>8</li><li>9</li><li>0</li><li>1</li><li>2</li><li>3</li><li>4</li><li>5</li><li>6</li><li>7</li><li>8</li><li>9</li><li>0</li>
           </ul>
         </div>
       </div>
-      <div class="row">
+      <div class="nav__Toggle row position-fixed bottom-0">
         <div class="col-12">
-          <button class="btn-toggle position-fixed bottom-0 border-0 bg-light bg-gradient w-100">123</button>
+          <button class="border-0 border-top bg-light bg-gradient w-100">123</button>
         </div>
       </div>
     </div>
-    <div class="col-10">
+    <div class="content col-10">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, et.</p>
     </div>
   </div>
