--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -5,25 +5,23 @@
 <style>
   .header {
     position: fixed;
-    right: 0;
+    top: 0;
     left: 0;
+    right: 0;
+    background-color: #ccc;
+    z-index: 1;
+    line-height: 50px;
+  }
+  .main {
+
   }
   .sidebar {
-    width: 20vh;
+    left: 0;
+    background-color: #999;
+    width: 200px;
   }
-  .fixed__side::-webkit-scrollbar{
-    display: none;
-  }
-  .fixed__side {
-    height: calc(100vh - 100px);
-    overflow-y: scroll;
-    max-width: 20vh;
-  }
-  .nav__Toggle {
-    line-height: 50px;
-    display: block;
-    width: 100%;
-    width: 20vh;
+  .content {
+    text-align: center;
   }
 
 </style>
@@ -34,23 +32,43 @@
       <div class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ducimus earum asperiores. Vitae cum officiis similique quia, non nihil incidunt!</div class="">
     </div>
   </div>
-  <div class="row">
-    <div class="sidebar col-2 border-end vh-100">
-      <div class="fixed__side row">
-        <div class="col-12">
-          <ul>
-            <li>1</li><li>2</li><li>3</li><li>4</li><li>5</li><li>6</li><li>7</li><li>8</li><li>9</li><li>0</li><li>1</li><li>2</li><li>3</li><li>4</li><li>5</li><li>6</li><li>7</li><li>8</li><li>9</li><li>0</li><li>1</li><li>2</li><li>3</li><li>4</li><li>5</li><li>6</li><li>7</li><li>8</li><li>9</li><li>0</li><li>1</li><li>2</li><li>3</li><li>4</li><li>5</li><li>6</li><li>7</li><li>8</li><li>9</li><li>0</li>
-          </ul>
-        </div>
-      </div>
-      <div class="nav__Toggle row position-fixed bottom-0">
-        <div class="col-12">
-          <button class="border-0 border-top bg-light bg-gradient w-100">123</button>
-        </div>
-      </div>
+  <div class="main row">
+    <div class="sidebar col-2">
+      <ul>
+        <li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li>
+      </ul>
     </div>
+    
     <div class="content col-10">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, et.</p>
+      <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
+      </div>
     </div>
   </div>
 </div>
