--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -13,7 +13,8 @@
     line-height: 50px;
   }
   .main {
-
+    padding-top: 50px;
+    /* max-height: calc(100vh - 50px); */
   }
   .sidebar {
     left: 0;
