--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -8,7 +8,7 @@
     top: 0;
     left: 0;
     right: 0;
-    background-color: #ccc;
+    /* background-color: #ccc; */
     z-index: 1;
     line-height: 50px;
   }
@@ -18,7 +18,7 @@
   }
   .sidebar {
     left: 0;
-    background-color: #999;
+    /* background-color: #999; */
     width: 200px;
     overflow: scroll;
     max-height: calc(100vh - 50px);
@@ -32,7 +32,7 @@
     left: 0;
     bottom: 0;
     line-height: 50px;
-    background-color: #666;
+    /* background-color: #666; */
     z-index: 1;
     width: 200px;
     cursor: pointer;
