--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -11,6 +11,7 @@
     /* background-color: #ccc; */
     z-index: 1;
     line-height: 50px;
+    border-bottom: solid 1px #999;
   }
   .main {
     padding-top: 50px;
@@ -21,7 +22,8 @@
     /* background-color: #999; */
     width: 200px;
     overflow: scroll;
-    max-height: calc(100vh - 50px);
+    height: calc(100vh - 100px);
+    border-right: solid 1px #999;
   }
   .sidebar::-webkit-scrollbar {
     display: none;
@@ -36,14 +38,17 @@
     z-index: 1;
     width: 200px;
     cursor: pointer;
-    color: #fff;
+    border-top: solid 1px #999;
+    border-right: solid 1px #999;
+    text-align: center;
   }
   .content {
     margin: auto;
     text-align: center;
-    border: solid 1px #999;
+    border-right: solid 1px #999;
+    border-left: solid 1px #999;
     overflow: scroll;
-    max-height: calc(100vh - 50px);
+    height: calc(100vh - 50px);
   }
   .content::-webkit-scrollbar {
     display: none;
@@ -54,47 +59,19 @@
 <div class="container-fluid">
   <div class="header row">
     <div class="col-12">
-      <div class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ducimus earum asperiores. Vitae cum officiis similique quia, non nihil incidunt!</div class="">
+      <div class="text-center">x</div>
     </div>
   </div>
   <div class="main row">
     <div class="sidebar col-2">
       <ul>
-        <li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li><li>1234567890</li>
+        <li>1234567890</li>
       </ul>
       <div class="toggle_btn">close button</div>
     </div>
     
     <div class="content col-10">
-      <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae non esse cumque atque tempora reiciendis quibusdam similique eos explicabo voluptatibus!</p>
-      </div>
+      <div>X</div>
     </div>
   </div>
 </div>
