--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -65,7 +65,7 @@
   <div class="main row">
     <div class="sidebar col-2">
       <ul>
-        <li>1234567890</li>
+        <li>Push Notification</li>
       </ul>
       <div class="toggle_btn">close button</div>
     </div>
