--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -25,6 +25,7 @@
     overflow: scroll;
     height: calc(100vh - 100px);
     border-right: solid 1px #999;
+    transition: all 0.2s ease;
   }
   .sidebar::-webkit-scrollbar {
     display: none;
@@ -41,6 +42,7 @@
     border-top: solid 1px #999;
     border-right: solid 1px #999;
     /* text-align: center; */
+    transition: all 0.2s ease;
   }
   .sidebar ul, li {
     line-height: 50px;
