--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -137,8 +137,8 @@
 
 <script>
   if (screen.width > 1199) nav_status = 1; else nav_status = 0;
-  console.log(nav_status);
-  function toggle() { if (nav_status == 1) closeNav(); else openNav(); }
+  if (window.innerWidth > 1199) nav_status = 1; else nav_status = 0;
+  toggle = () => { if (nav_status == 1) closeNav(); else openNav(); }
   function closeNav() {
     nav_status = 0
     spans = document.querySelectorAll(".sidebar li > span")
