--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -119,6 +119,7 @@
     <div class="sidebar col-2">
       <ul>
         <li><i class="fa-regular fa-message"></i><span>Push Notification</span></li>
+        <li><i class="fa-regular fa-message"></i><span>Push Notification</span></li>
       </ul>
       <div class="toggle_btn" onclick="toggle()">
         <i class="fa-regular fa-square-caret-left"></i>
