--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -5,11 +5,9 @@
 <style>
   .header {
     position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    /* background-color: #ccc; */
-    z-index: 2;
+    top: 0; left: 0; right: 0; z-index: 2;
+
+    background-color: #fff;
     line-height: 50px;
     border-bottom: solid 1px #999;
   }
