--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -10,7 +10,7 @@
   .header {
     position: fixed;
     top: 0; left: 0; right: 0; z-index: 2;
-
+    
     background-color: #fff;
     border-bottom: solid 1px #999;
     line-height: 50px;
@@ -20,7 +20,8 @@
     /* max-height: calc(100vh - 50px); */
   }
   .sidebar {
-    left: 0; z-index: 1;
+    position: relative;
+    /* left: 0; z-index: 1; */
     
     background-color: #fff;
     width: var(--sidebar-width);
