--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -40,7 +40,11 @@
     <div class="main row">
       <div class="sidebar col-2 open">
         <ul>
-          <li><i class="fa-regular fa-message"></i><span class="show">Push Notification</span></li>
+          <li data-bs-toggle="collapse" href="#cl1" role="button" aria-expanded="false" aria-controls="cl1" ><i class="fa-regular fa-message"></i><span class="show">Push Notification</span></li>
+          <div class="menu_sub_items collapse multi-collapse" id="cl1">
+            <div class="sub_item">123</div>
+            <div class="sub_item">321</div>
+          </div>
           <li><i class="fa-regular fa-message"></i><span class="show">Push Notification</span></li>
         </ul>
         <div class="toggle_btn open" onclick="toggle()">
