--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -42,8 +42,8 @@
         <ul>
           <li data-bs-toggle="collapse" href="#cl1" role="button" aria-expanded="false" aria-controls="cl1" ><i class="fa-regular fa-message"></i><span class="show">Push Notification</span></li>
           <div class="menu_sub_items collapse multi-collapse" id="cl1">
-            <div class="sub_item">123</div>
-            <div class="sub_item">321</div>
+            <div class="sub_item"><a href="#">123</a></div>
+            <div class="sub_item"><a href="#">321</a></div>
           </div>
           <li><i class="fa-regular fa-message"></i><span class="show">Push Notification</span></li>
         </ul>
