--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,9 +1,10 @@
 {% extends "layouts/base.html" %}
+{% load i18n %}
 {% block title %} index {% endblock title %}
 {% block content %}
 
 
-123123
+{% trans "test_text" %}
 
 
 {% endblock content %}
