--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -6,5 +6,20 @@
 
 {% trans "test_text" %}
 
+{% get_current_language as CURRENT_LANGUAGE %}
+{% get_available_languages as AVAILABLE_LANGUAGES %}
+{% get_language_info_list for AVAILABLE_LANGUAGES as languages %}
+<div class="languages">
+  <ul class="languages">
+    {% for language in languages %}
+      <li>
+        <a href="/{{ language.code }}/"
+          {% if language.code == CURRENT_LANGUAGE %} class="active"{% endif %}>
+          {{ language.name_local }}
+        </a>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
 
 {% endblock content %}
