--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -33,8 +33,8 @@
 
   <div class="container-fluid">
     <div class="header row">
-      <div class="col-12">
-        <div class="text-center">x</div>
+      <div class="logo col-1">
+        <img src="{% static 'img/logo.jpg' %}" alt="logo">
       </div>
     </div>
     <div class="main row">
