--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -3,12 +3,16 @@
     --sidebar-width_collapse: 50px;
 }
 
+html, body {
+    box-sizing: border-box;
+}
+
 .header {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    z-index: 2;
+    z-index: 3;
     border-bottom: solid 1px #999;
 
     background-color: #fff;
