--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -34,7 +34,7 @@
   <div class="container-fluid">
     <div class="header row">
       <div class="logo col-1">
-        <img src="{% static 'img/logo.jpg' %}" alt="logo">
+        <a href=""><img src="{% static 'img/logo.jpg' %}" alt="logo"></a>
       </div>
     </div>
     <div class="main row">
