--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -33,7 +33,7 @@
 
   <div class="container-fluid">
     <div class="header row">
-      <div class="logo col-1">
+      <div class="logo col-md-2  ">
         <a href=""><img src="{% static 'img/logo.jpg' %}" alt="logo"></a>
       </div>
     </div>
